tests/trybuild/cannot_call_traced_on_traced_result.rs
use eros::{traced, Traced, TracedError};



fn main() {
    let error: eros::TracedError = traced!("Error");
    let result: Result<(), TracedError> = Err(error);
    let _error = result.traced();
}
